--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -412,7 +412,7 @@
   align-items: center;
   background-color: #f5f5f5;
   padding: 20px 40px;
-  /* Adjust padding as needed */
+  /* Adjust padding as neded */
 }
 
 .header .logo {
@@ -458,6 +458,13 @@
 
 /* Show the menu on mobile devices */
 @media (max-width: 768px) {
+  .header{
+      padding: 10px 10px !important;
+    }
+  .logo {
+      margin-left: 0 !important;
+    }
+
   .nav-items {
     display: none;
     flex-direction: column;
