--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -485,3 +485,12 @@
     display: block;
   }
 }
+
+@media (min-width: 1600px) {
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+  }
+}
