--- a/src/app/user/page.module.css
+++ b/src/app/user/page.module.css
@@ -33,27 +33,30 @@
     .userCard {
         width: calc(50% - 20px);
     }
-        .h2 {
-            font-size: 1rem;
-        }
+
+    .h2 {
+        font-size: 1rem;
+    }
 }
 
 @media (min-width: 768px) {
     .userCard {
         width: calc(33.3333% - 20px);
     }
-        .h2 {
-            font-size: 1rem;
-        }
+
+    .h2 {
+        font-size: 1rem;
+    }
 }
 
 @media (min-width: 992px) {
     .userCard {
         width: calc(25% - 20px);
     }
-        .h2 {
-            font-size: 1rem;
-        }
+
+    .h2 {
+        font-size: 1rem;
+    }
 }
 
 .userCard:hover {
@@ -88,9 +91,20 @@
     margin-top: auto;
 }
 
-.editButton,
-.deleteButton {
+.editButton {
     background-color: #5edaf0;
+    color: #000;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: 700;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.deleteButton {
+    background-color: #f80a0a;
     color: #000;
     padding: 8px 12px;
     border: none;
